# virtual-desktop-bar

./: CMakeLists.txt  README.md
package/: metadata.json
package/contents/config/: config.qml  main.xml
package/contents/ui/: AddDesktopButton.qml  Container.qml  DesktopButton.qml  DesktopButtonTooltip.qml  DesktopRenamePopup.qml  main.qml
package/contents/ui/DesktopButton/: AddDesktopButton.qml  AnimatedDesktopButton.qml  DesktopButton.qml  DesktopButtonDragPlaceholder.qml  DesktopButtonDropArea.qml  DesktopButtonGrid.qml  DesktopButtonIndicator.qml  DesktopButtonLabel.qml  DesktopButtonTooltip.qml  DesktopRenamePopup.qml
package/contents/ui/DesktopButton/TooltipWindowList/: WindowItemDragPlaceholder.qml  WindowItemDragVisual.qml  WindowListHeader.qml  WindowListItem.qml
package/contents/ui/applet/: AddDesktopButton.qml  Container.qml  DesktopButton.qml  DesktopButtonTooltip.qml  DesktopRenamePopup.qml
package/contents/ui/common/: Backend.qml  GrowingTextField.qml  IndicatorStyles.js  LayoutProps.qml  TaskManagerUtils.qml  TextTooltip.qml  Utils.js  qmldir
package/contents/ui/config/: AppearanceTab.qml  BehaviorTab.qml  ColorButton.qml  HintIcon.qml  PXSpinBox.qml  SectionHeader.qml  SupportTab.qml
plugin/: CMakeLists.txt  KWinDesktop.h  VirtualDesktopBar.cpp  VirtualDesktopBar.hpp  VirtualDesktopBarPlugin.cpp
